after remove final